--- a/FLX_homework_5/homework/src/index.html
+++ b/FLX_homework_5/homework/src/index.html
@@ -55,8 +55,8 @@
                 </p>
               </div>
               <div class="posts__date">
-                <span class="posts__date--num">07</span
-                ><span class="posts__date--month">mar</span>
+                <span class="posts__date--num">07</span>
+                <span class="posts__date--month">mar</span>
               </div>
             </div>
           </article>
@@ -75,8 +75,8 @@
                 </p>
               </div>
               <div class="posts__date">
-                <span class="posts__date--num">06</span
-                ><span class="posts__date--month">mar</span>
+                <span class="posts__date--num">06</span>
+                <span class="posts__date--month">mar</span>
               </div>
             </div>
           </article>
@@ -95,8 +95,8 @@
                 </p>
               </div>
               <div class="posts__date">
-                <span class="posts__date--num">04</span
-                ><span class="posts__date--month">mar</span>
+                <span class="posts__date--num">04</span>
+                <span class="posts__date--month">mar</span>
               </div>
             </div>
           </article>
@@ -115,8 +115,8 @@
                 </p>
               </div>
               <div class="posts__date">
-                <span class="posts__date--num">01</span
-                ><span class="posts__date--month">mar</span>
+                <span class="posts__date--num">01</span>
+                <span class="posts__date--month">mar</span>
               </div>
             </div>
           </article>
@@ -129,8 +129,8 @@
               doloribus, molestiae fugit!
             </p>
             <div class="posts__date">
-              <span class="posts__date--num">27</span
-              ><span class="posts__date--month">feb</span>
+              <span class="posts__date--num">27</span>
+              <span class="posts__date--month">feb</span>
             </div>
           </article>
         </section>
