--- a/FLX_homework_5/homework/src/index.html
+++ b/FLX_homework_5/homework/src/index.html
@@ -21,7 +21,7 @@
           </h1>
         </a>
       </div>
-      <div class="burder" tabindex="1">&#9776;</div>
+      <div class="burger" tabindex="1">&#9776;</div>
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
