--- a/FLX_homework_6/homework/task1.html
+++ b/FLX_homework_6/homework/task1.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Task 1</title>
-</head>
+  </head>
 
-<body>
-    <script src="js/task1.js"></script>
-</body>
-
+  <body>
+    <script src="./js/task1.js"></script>
+  </body>
 </html>
