adusted navbar on tablets, added utilities

--- a/FLX_homework_13/homework/index.html
+++ b/FLX_homework_13/homework/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="bg-light border-bottom">
-    <nav class="container navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="container navbar navbar-expand-md navbar-light bg-light">
       <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" /></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,7 +64,7 @@
       <h3 class="border-bottom border-primary pb-2">Related classes</h3>
       <div class="row pt-4">
         <article class="col-md-3 col-6 mb-3">
-          <div class="card rounded-0 class-1">
+          <div class="card rounded-0 card-red">
             <img src="img/cardio-kickbox.jpg" alt="Cardio kickboxing" />
             <h6 class="card-title text-white text-center p-2 m-0">
               Cardio kickboxing
@@ -72,7 +72,7 @@
           </div>
         </article>
         <article class="col-md-3 col-6 mb-3">
-          <div class="card rounded-0 class-2">
+          <div class="card rounded-0 card-blue">
             <img src="img/fitness.jpg" alt="Fitness express" />
             <h6 class="card-title text-white text-center p-2 m-0">
               Fitness express
@@ -80,13 +80,13 @@
           </div>
         </article>
         <article class="col-md-3 col-6 mb-3">
-          <div class="card rounded-0 class-3">
+          <div class="card rounded-0 card-orange">
             <img src="img/zumba.jpg" alt="Zumba" />
             <h6 class="card-title text-white text-center p-2 m-0">Zumba</h6>
           </div>
         </article>
         <article class="col-md-3 col-6 mb-3">
-          <div class="card rounded-0 class-4">
+          <div class="card rounded-0 card-green">
             <img src="img/bootcamp.jpg" alt="Bootcamp" />
             <h6 class="card-title text-white text-center p-2 m-0">
               Bootcamp
