mobile device changes

--- a/FLX_homework_14/homework/app/index.html
+++ b/FLX_homework_14/homework/app/index.html
@@ -29,7 +29,7 @@
   <script src="js/smoothscroll.js" defer></script>
   <script src="js/lazyload.min.js" defer></script>
   <!-- Custom Scripts -->
-  <script defer src="js/custom.js"></script>
+  <script src="js/custom.js" defer></script>
 
 </head>
 
