--- a/FLX_homework_18/homework/index.html
+++ b/FLX_homework_18/homework/index.html
@@ -14,7 +14,7 @@
       integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/styles.css" />
+    <link rel="stylesheet" href="assets/styles.css" />
     <title>User Dashboard</title>
   </head>
   <body>
@@ -70,7 +70,7 @@
     </main>
 
     <footer></footer>
-    <script src="./src/xhr.js"></script>
-    <script src="./src/app.js"></script>
+    <script src="src/xhr.js"></script>
+    <script src="src/app.js"></script>
   </body>
 </html>
