--- a/FLX_homework_18/homework/index.html
+++ b/FLX_homework_18/homework/index.html
@@ -39,7 +39,7 @@
       </div>
     </div>
     <div class="main__content"></div>
-    <div class="modal">
+    <div id="modal" class="modal__closed">
       <form method="get" class="modal__form">
         <div class="modal__form--name">
           <label for="name">New name:</label>
@@ -63,11 +63,12 @@
         </div>
         <div class="form-example">
           <input class="modal__form--btn btn" type="submit" value="Submit" />
+          <input class="modal__form--cancel btn" type="button" value="Cancel" />
         </div>
       </form>
     </div>
+    <div class="body__loader"></div>
   </main>
-
   <footer class="footer">
     <div class="footer__copyright">
       &copy; FLX training & AJAX HTTP
