--- a/FLX_homework_19/homework/src/index.html
+++ b/FLX_homework_19/homework/src/index.html
@@ -9,7 +9,25 @@
   </head>
 
   <body>
-    <h1>Hello World</h1>
+    <header class="header">
+      <h1 class="header__logo">Rock, Paper, or Scissors</h1>
+    </header>
+    <main class="main">
+      <section class="game">
+        <ul class="game__rules">
+          <li class="game__rules--rule">Scissors beats a paper</li>
+          <li class="game__rules--rule">Paper beats a rock</li>
+          <li class="game__rules--rule">Rock beats a scissors</li>
+        </ul>
+        <p class="game__special">And we play up to three wins!</p>
+      </section>
+      <input type="submit" class="game__play btn" value="Let's play" />
+    </main>
+    <footer class="footer">
+      <div class="footer__copyright">
+        &copy; FLX training & AJAX HTTP
+      </div>
+    </footer>
     <script src="./js/app.js"></script>
   </body>
 </html>
